# op-desafios

desafio-02/ksombrah/c/: AUTHORS  CREDITS  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  configure~  desafio.desktop.in  desafio.directory.in  desafio.menu.in  doxygen.cfg  doxygen.m4  libs.am  libs.m4  libsrc.am
desafio-02/ksombrah/c/img/: tux.xpm
desafio-02/ksombrah/c/src/: Makefile.am  Makefile.in  bibliotecas.h  icones.h  main.c  principal.c  principal.h
desafio-02/ksombrah/c/win32/: Makefile.am  Makefile.in  win32.rc.in
